--- a/style.css
+++ b/style.css
@@ -705,3 +705,41 @@ form .button input:hover {
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
 }
+
+/* CAMPUS PAGE CSS -------------------------------------------------------------- */
+
+.campusMain {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    background-image: linear-gradient(45deg, rgba(214, 169, 169, 0.5), rgba(164, 148, 211, 0.9)), url(Lekciyonka.jpg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+.campusText {
+    display: flex;
+    justify-content: center;
+    font-family: var(--myfont-family);
+    color: rgb(37, 37, 112);
+    font-size: 3vw;
+}
+.campusHome {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    text-align: center;
+    align-items: center;
+    font-size: 1.5vw;
+    font-weight: 1000;
+}
+.generalReviews {
+    display: flex;
+    flex-direction: row;
+}
+.generalLeft {
+    
+}
